<resources>
    <string name="app_name">UWU Media App</string>
    <string name="copyright">© Uva Wellassa University Media Unit</string>
    <string name="signin">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome back</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="uwu_wall">UWU Wall</string>
    <string name="news">News</string>
    <string name="events">Events</string>
    <string name="Live">Live</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>